# Employee-Attrition-Analysis

./: Plan.md  README.md  analysis.ipynb  main.ipynb  main.py  pyproject.toml  summary.docx
