[project]
name = "employeeattrition-shreyasyarabadi"
version = "0.1.0"
description = "Predictive analytics and machine learning pipeline for analyzing HR employee attrition."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
